crates/apollo-compiler/test_data/diagnostics/0088_fragment_selection_set.txt
Error: cannot query field `topProduct` on type `Query`
    ╭─[0088_fragment_selection_set.graphql:13:5]
    │
  1 │ ╭───▶ type Query {
    ┆ ┆     
  4 │ ├───▶ }
    │ │         
    │ ╰───────── `Query` declared here
    │ 
 13 │   ╭─▶     topProduct {
    ┆   ┆   
 15 │   ├─▶     }
    │   │           
    │   ╰─────────── `topProduct` field is not defined
    │       
    │       Help: `topProduct` is not defined on `Query` type
────╯
Error: cannot query field `notExistingField` on type `Product`
    ╭─[0088_fragment_selection_set.graphql:22:3]
    │
  6 │ ╭─▶ type Product {
    ┆ ┆   
  9 │ ├─▶ }
    │ │       
    │ ╰─────── `Product` declared here
    │ 
 22 │       notExistingField
    │       ────────┬───────  
    │               ╰───────── `notExistingField` field is not defined
    │     
    │     Help: `notExistingField` is not defined on `Product` type
────╯

